# GeoJSON-Generator

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: generator.py
app/api/v1/schemas/: json_schema.py
app/core/: config.py
app/services/: ai_service.py  base_processor.py  doc_processor.py  excel_processor.py  kml_processor.py  shp_processor.py
frontend/: app.py
